// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryBlack accepts textStyle prop 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 1)",
      "borderRadius": 2,
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={null}
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 14,
          },
          Object {
            "color": "white",
            "fontSize": 22,
            "opacity": 1,
          },
          Object {
            "fontFamily": "Unica77LL-Medium",
          },
        ]
      }
    >
      I am a shiny new button
    </Text>
  </View>
</View>
`;

exports[`PrimaryBlack renders properly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 1)",
      "borderRadius": 2,
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={null}
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 14,
          },
          Object {
            "color": "white",
            "opacity": 1,
          },
          Object {
            "fontFamily": "Unica77LL-Medium",
          },
        ]
      }
    >
      I am a shiny new  button
    </Text>
  </View>
</View>
`;
